--- a/mongoDB/version4_x/spring5-springdata3/pom.xml
+++ b/mongoDB/version4_x/spring5-springdata3/pom.xml
@@ -25,13 +25,13 @@
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>com.github.cloudyrock.mongock</groupId>
-                <artifactId>mongock-bom</artifactId>
-                <version>5.0.1.BETA</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>com.github.cloudyrock.mongock</groupId>-->
+<!--                <artifactId>mongock-bom</artifactId>-->
+<!--                <version>5.0.3.BETA</version>-->
+<!--                <type>pom</type>-->
+<!--                <scope>import</scope>-->
+<!--            </dependency>-->
 
         </dependencies>
     </dependencyManagement>
@@ -49,15 +49,21 @@
             <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.github.cloudyrock.mongock</groupId>
-            <artifactId>mongock-springboot-v2.4</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.github.cloudyrock.mongock</groupId>-->
+<!--            <artifactId>mongock-springboot</artifactId>-->
+<!--        </dependency>-->
 
 
+<!--        <dependency>-->
+<!--            <groupId>com.github.cloudyrock.mongock</groupId>-->
+<!--            <artifactId>mongodb-springdata-v3-driver</artifactId>-->
+<!--        </dependency>-->
+
         <dependency>
-            <groupId>com.github.cloudyrock.mongock</groupId>
-            <artifactId>mongodb-springdata-v3-driver</artifactId>
+            <groupId>io.mongock.professional</groupId>
+            <artifactId>mongock-cli-springboot</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
@@ -97,14 +103,14 @@
         </profile>
 
         <profile>
-            <id>aux</id>
+            <id>mongock-cli</id>
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-maven-plugin</artifactId>
                         <configuration>
-                            <mainClass>aux.Spring5SpringData3AppAux</mainClass>
+                            <mainClass>io.mongock.professional.cli.springboot.SpringBootCLI</mainClass>
                         </configuration>
                         <executions>
                             <execution>
