--- a/mongoDB/pom.xml
+++ b/mongoDB/pom.xml
@@ -7,7 +7,7 @@
     <description>Mongock examples for MongoDB</description>
     <groupId>com.github.cloudyrock.mongock</groupId>
     <artifactId>mongock-examples-mongodb</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1-SNAPSHOT</version>
     <packaging>pom</packaging>
   
     <modules>
@@ -19,6 +19,7 @@
         <module>standalone-mongodb-advanced</module>
         <module>standalone-springdata-basic</module>
         <module>standalone-springdata-advanced</module>
+        <module>micronaut-mongodb-basic</module>
     </modules>
     
     <properties>
@@ -37,7 +38,9 @@
         <spring-boot.version>2.4.0</spring-boot.version>
         <mongodb.spring-data.v3.version>3.0.6.RELEASE</mongodb.spring-data.v3.version>
         <mongodb.driver-sync.version>4.0.5</mongodb.driver-sync.version>
-        
+
+        <micronaut.version>2.5.6</micronaut.version>
+
         <slf4j.version>1.7.30</slf4j.version>
     </properties>
     
@@ -58,6 +61,14 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <dependency>
+                <groupId>io.micronaut</groupId>
+                <artifactId>micronaut-parent</artifactId>
+                <version>${micronaut.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     
@@ -73,6 +84,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven.compiler.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>io.micronaut.build</groupId>
+                    <artifactId>micronaut-maven-plugin</artifactId>
+                    <version>${micronaut.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
